# serializer version: 1
# name: test_all_entities[number.stove_combustion_power-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 5,
      'min': 1,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.stove_combustion_power',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.POWER_FACTOR: 'power_factor'>,
    'original_icon': None,
    'original_name': 'Combustion power',
    'platform': 'palazzetti',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'combustion_power',
    'unique_id': '11:22:33:44:55:66-combustion_power',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[number.stove_combustion_power-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'power_factor',
      'friendly_name': 'Stove Combustion power',
      'max': 5,
      'min': 1,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.stove_combustion_power',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_all_entities[number.stove_left_fan_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 5,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.stove_left_fan_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Left fan speed',
    'platform': 'palazzetti',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fan_left_speed',
    'unique_id': '11:22:33:44:55:66-fan_left_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[number.stove_left_fan_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'wind_speed',
      'friendly_name': 'Stove Left fan speed',
      'max': 5,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.stove_left_fan_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
# name: test_all_entities[number.stove_right_fan_speed-entry]
  EntityRegistryEntrySnapshot({
    'aliases': set({
    }),
    'area_id': None,
    'capabilities': dict({
      'max': 5,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'number',
    'entity_category': None,
    'entity_id': 'number.stove_right_fan_speed',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'options': dict({
    }),
    'original_device_class': <NumberDeviceClass.WIND_SPEED: 'wind_speed'>,
    'original_icon': None,
    'original_name': 'Right fan speed',
    'platform': 'palazzetti',
    'previous_unique_id': None,
    'supported_features': 0,
    'translation_key': 'fan_right_speed',
    'unique_id': '11:22:33:44:55:66-fan_right_speed',
    'unit_of_measurement': None,
  })
# ---
# name: test_all_entities[number.stove_right_fan_speed-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      'device_class': 'wind_speed',
      'friendly_name': 'Stove Right fan speed',
      'max': 5,
      'min': 0,
      'mode': <NumberMode.AUTO: 'auto'>,
      'step': 1,
    }),
    'context': <ANY>,
    'entity_id': 'number.stove_right_fan_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '3',
  })
# ---
